[WIP]: add function to grab arrays from dataframes

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -735,12 +735,12 @@
     "                \"num_coinciding_defects\": total_num_coinciding_defects,\n",
     "                \"mean_curvature_defect_length\": mean_curvature_defect_length,\n",
     "                \"mean_height_defect_length\": mean_height_defect_length,\n",
-    "                \"height_defects_lengths\": height_defects_lengths,\n",
-    "                \"curvature_defects_lengths\": curvature_defects_lengths,\n",
+    "                \"height_defects_lengths\": height_defects_lengths.tolist(),\n",
+    "                \"curvature_defects_lengths\": curvature_defects_lengths.tolist(),\n",
     "                \"mean_curvature_defect_gap_length\": mean_curvature_defect_gap_length,\n",
     "                \"mean_height_defect_gap_length\": mean_height_defect_gap_length,\n",
-    "                \"curvature_defect_gaps_lengths\": curvature_defect_gaps_lengths,\n",
-    "                \"height_defect_gaps_lengths\": height_defect_gaps_lengths,\n",
+    "                \"curvature_defect_gaps_lengths\": curvature_defect_gaps_lengths.tolist(),\n",
+    "                \"height_defect_gaps_lengths\": height_defect_gaps_lengths.tolist(),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -833,7 +833,7 @@
     "    height_threshold_abs_nm=height_threshold_abs_nm,\n",
     "    coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
     "    defect_stats_dir=defect_stats_dir,\n",
-    "    plot_defects=True,\n",
+    "    plot_defects=False,\n",
     ")\n",
     "\n",
     "# save the defect stats to a csv\n",
@@ -966,8 +966,7 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Mean Curvature Defect Length (nm)\")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -977,32 +976,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# histogram of all defect lengths\n",
-    "height_defect_lengths = defect_stats_df[\"height_defects_lengths\"]\n",
-    "# grab the non empty arrays in this series\n",
-    "# iterate over the height_defect_lengths series\n",
-    "height_defect_lengths_array = np.array([])\n",
-    "for  i, length_array in enumerate(height_defect_lengths):\n",
-    "    # print(length_array)\n",
-    "    # print(type(length_array))\n",
-    "    assert isinstance(length_array, np.ndarray), f\"length_array {i} is not a numpy array\"\n",
-    "    # if shape is () then cast to float\n",
-    "    if length_array.shape == ():\n",
-    "        length_array = np.array([float(length_array)])\n",
-    "\n",
-    "    if len(length_array) > 0:\n",
-    "        height_defect_lengths_array = np.concatenate((height_defect_lengths_array, length_array))\n",
-    "\n",
-    "# plot stripplot with boxes of height defect lengths\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "sns.stripplot(data=height_defect_lengths_array, color=\"black\", alpha=0.5)\n",
-    "sns.boxplot(\n",
-    "    data=height_defect_lengths_array,\n",
-    "    color=\"lightgrey\",\n",
-    ")\n",
-    "plt.xlabel(\"Height Defect Lengths (nm)\")\n",
+    "def extract_list_from_lists_in_df(df: pd.DataFrame, column_name: str) -> list:\n",
+    "    \"\"\"\n",
+    "    Extract a list from a column in a DataFrame where each entry is a string representation of a list.\n",
+    "    \"\"\"\n",
+    "    extracted_list = []\n",
+    "    for item in df[column_name]:\n",
+    "        # convert to list from string using eval\n",
+    "        try:\n",
+    "            extracted_list.append(eval(item))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error converting item {item} to list: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64dea124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stripplot of height defects lengths\n",
+    "height_defects_lengths = extract_list_from_lists_in_df(defect_stats_df, \"height_defects_lengths\")\n",
+    "sns.stripplot(y=height_defects_lengths, color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(y=height_defects_lengths, color=\"lightgrey\")\n",
+    "plt.ylabel(\"Height Defect Lengths (nm)\")\n",
     "plt.title(\"Height Defect Lengths\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "# stripplot of height defect gaps lengths\n",
+    "height_defect_gaps_lengths = extract_list_from_lists_in_df(defect_stats_df, \"height_defect_gaps_lengths\")\n",
+    "sns.stripplot(y=height_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(y=height_defect_gaps_lengths, color=\"lightgrey\")\n",
+    "plt.ylabel(\"Height Defect Gap Lengths (nm)\")\n",
+    "plt.title(\"Height Defect Gap Lengths\")\n",
+    "plt.show()\n",
+    "# stripplot of curvature defects lengths\n",
+    "curvature_defects_lengths = extract_list_from_lists_in_df(defect_stats_df, \"curvature_defects_lengths\")\n",
+    "sns.stripplot(y=curvature_defects_lengths, color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(y=curvature_defects_lengths, color=\"lightgrey\")\n",
+    "plt.ylabel(\"Curvature Defect Lengths (nm)\")\n",
+    "plt.title(\"Curvature Defect Lengths\")\n",
+    "plt.show()\n",
+    "# stripplot of curvature defect gaps lengths\n",
+    "curvature_defect_gaps_lengths = extract_list_from_lists_in_df(defect_stats_df, \"curvature_defect_gaps_lengths\")\n",
+    "sns.stripplot(y=curvature_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(y=curvature_defect_gaps_lengths, color=\"lightgrey\")\n",
+    "plt.ylabel(\"Curvature Defect Gap Lengths (nm)\")\n",
+    "plt.title(\"Curvature Defect Gap Lengths\")\n",
+    "plt.show()"
    ]
   },
   {
