working: plot defect and gap lengths

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -976,7 +976,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_list_from_lists_in_df(df: pd.DataFrame, column_name: str) -> list:\n",
+    "def extract_list_from_lists_in_df(df: pd.DataFrame, column_name: str, ignore_single_elements: bool = False) -> list:\n",
     "    \"\"\"\n",
     "    Extract a list from a column in a DataFrame where each entry is a string representation of a list.\n",
     "    \"\"\"\n",
@@ -984,9 +984,17 @@
     "    for item in df[column_name]:\n",
     "        # convert to list from string using eval\n",
     "        try:\n",
-    "            extracted_list.append(eval(item))\n",
+    "            list_item = eval(item)\n",
+    "            if isinstance(list_item, list):\n",
+    "                if ignore_single_elements and len(list_item) == 1:\n",
+    "                    continue\n",
+    "                extracted_list.extend(list_item)\n",
+    "            else:\n",
+    "                print(f\"Item {item} is not a list, skipping.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"Error converting item {item} to list: {e}\")\n"
+    "            print(f\"Error converting item {item} to list: {e}\")\n",
+    "\n",
+    "    return extracted_list"
    ]
   },
   {
@@ -1004,7 +1012,9 @@
     "plt.title(\"Height Defect Lengths\")\n",
     "plt.show()\n",
     "# stripplot of height defect gaps lengths\n",
-    "height_defect_gaps_lengths = extract_list_from_lists_in_df(defect_stats_df, \"height_defect_gaps_lengths\")\n",
+    "height_defect_gaps_lengths = extract_list_from_lists_in_df(\n",
+    "    defect_stats_df, \"height_defect_gaps_lengths\", ignore_single_elements=True\n",
+    ")\n",
     "sns.stripplot(y=height_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
     "sns.violinplot(y=height_defect_gaps_lengths, color=\"lightgrey\")\n",
     "plt.ylabel(\"Height Defect Gap Lengths (nm)\")\n",
@@ -1018,7 +1028,9 @@
     "plt.title(\"Curvature Defect Lengths\")\n",
     "plt.show()\n",
     "# stripplot of curvature defect gaps lengths\n",
-    "curvature_defect_gaps_lengths = extract_list_from_lists_in_df(defect_stats_df, \"curvature_defect_gaps_lengths\")\n",
+    "curvature_defect_gaps_lengths = extract_list_from_lists_in_df(\n",
+    "    defect_stats_df, \"curvature_defect_gaps_lengths\", ignore_single_elements=True\n",
+    ")\n",
     "sns.stripplot(y=curvature_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
     "sns.violinplot(y=curvature_defect_gaps_lengths, color=\"lightgrey\")\n",
     "plt.ylabel(\"Curvature Defect Gap Lengths (nm)\")\n",
