improve plotting (clarity zscale and threshold lines

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -513,13 +513,38 @@
     "    defect_method: str,\n",
     "    curvature_threshold_abs_radpernm: float,\n",
     "    curvature_threshold_iqr_factor: float,\n",
-    ") -> dict:\n",
-    "    \"\"\"Find curvature defects in grains.\"\"\"\n",
+    ") -> tuple[dict, dict]:\n",
+    "    \"\"\"Find curvature defects in grains.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    grains_dictionary : dict\n",
+    "        Dictionary containing grain data.\n",
+    "    defect_method : str\n",
+    "        Method to use for finding defects.\n",
+    "        Options: \"per_tip_median_iqr\", \"threshold_abs\"\n",
+    "    curvature_threshold_abs_radpernm : float\n",
+    "        Absolute threshold for curvature defects in rad/nm.\n",
+    "    curvature_threshold_iqr_factor : float\n",
+    "        IQR factor for calculating curvature thresholds.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple[dict, dict]\n",
+    "        - new_grains_dictionary: Updated grains dictionary with curvature defects.\n",
+    "        - curvature_thresholds_by_tip: Dictionary with curvature thresholds by tip. Possibly empty if defect_method is\n",
+    "        \"threshold_abs\".\n",
+    "\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ValueError\n",
+    "        If the defect_method is not supported.\n",
+    "    \"\"\"\n",
     "    print(f\"finding curvature defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
+    "    curvature_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
     "    if defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate curvature threshold\n",
-    "        curvature_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
     "        all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary=grains_dictionary)\n",
     "        for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
     "            print(f\"tip: {tip}\")\n",
@@ -564,7 +589,7 @@
     "    else:\n",
     "        raise ValueError(f\"defect_method {defect_method} not supported\")\n",
     "\n",
-    "    return new_grains_dictionary\n",
+    "    return new_grains_dictionary, curvature_thresholds_by_tip\n",
     "\n",
     "\n",
     "def find_height_defects_grains_dictionary(\n",
@@ -572,13 +597,36 @@
     "    defect_method: str,\n",
     "    height_threshold_iqr_factor: float,\n",
     "    height_threshold_abs_nm: float,\n",
-    ") -> dict:\n",
-    "    \"\"\"Find height defects in grains.\"\"\"\n",
+    ") -> tuple[dict, dict]:\n",
+    "    \"\"\"Find height defects in grains.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    grains_dictionary : dict\n",
+    "        Dictionary containing grain data.\n",
+    "    defect_method : str\n",
+    "        Method to use for finding defects.\n",
+    "        Options: \"per_tip_median_iqr\", \"abs\"\n",
+    "    height_threshold_iqr_factor : float\n",
+    "        IQR factor for calculating height thresholds.\n",
+    "    height_threshold_abs_nm : float\n",
+    "        Absolute threshold for height defects in nm.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple[dict, dict]\n",
+    "        - new_grains_dictionary: Updated grains dictionary with height defects.\n",
+    "        - height_thresholds_by_tip: Dictionary with height thresholds by tip. Possibly empty if defect_method is \"abs\".\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ValueError\n",
+    "        If the defect_method is not supported.\n",
+    "    \"\"\"\n",
     "    print(f\"finding height defects using method {defect_method}\")\n",
     "    new_grains_dictionary = {}\n",
+    "    height_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
     "    if defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate height threshold\n",
-    "        height_thresholds_by_tip: dict[int, tuple[float, float]] = {}\n",
     "        all_heights_by_tip = fetch_all_heights_by_tip(grains_dictionary=grains_dictionary)\n",
     "        for tip, heights in all_heights_by_tip.items():\n",
     "            print(f\"tip: {tip}\")\n",
@@ -621,7 +669,7 @@
     "    else:\n",
     "        raise ValueError(f\"defect_height_threshold_method {defect_method} not supported\")\n",
     "\n",
-    "    return new_grains_dictionary\n",
+    "    return new_grains_dictionary, height_thresholds_by_tip\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
@@ -635,16 +683,49 @@
     "    coindicing_defect_distance_threshold_nm: float,\n",
     "    defect_stats_dir: Path,\n",
     "    plot_defects: bool,\n",
-    ") -> tuple[dict, pd.DataFrame]:\n",
+    ") -> tuple[dict, pd.DataFrame, dict, dict]:\n",
     "    \"\"\"\n",
     "    Find defects in height and curvature for each molecule in the grains dictionary.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    grains_dictionary : dict\n",
+    "        Dictionary containing grain data.\n",
+    "    curvature_defect_method : str\n",
+    "        Method to use for finding curvature defects.\n",
+    "        Options: \"per_tip_median_iqr\", \"threshold_abs\"\n",
+    "    curvature_threshold_abs_radpernm : float\n",
+    "        Absolute threshold for curvature defects in rad/nm.\n",
+    "    curvature_threshold_iqr_factor : float\n",
+    "        IQR factor for calculating curvature thresholds.\n",
+    "    height_defect_method : str\n",
+    "        Method to use for finding height defects.\n",
+    "        Options: \"per_tip_median_iqr\", \"abs\"\n",
+    "    height_threshold_iqr_factor : float\n",
+    "        IQR factor for calculating height thresholds.\n",
+    "    height_threshold_abs_nm : float\n",
+    "        Absolute threshold for height defects in nm.\n",
+    "    coindicing_defect_distance_threshold_nm : float\n",
+    "        Distance threshold in nm to consider defects coinciding.\n",
+    "    defect_stats_dir : Path\n",
+    "        Directory to save defect statistics.\n",
+    "    plot_defects : bool\n",
+    "        Whether to plot the defects.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    tuple[dict, pd.DataFrame, dict, dict]\n",
+    "        - grains_dictionary: Updated grains dictionary with defects.\n",
+    "        - defect_stats_df: DataFrame containing defect statistics.\n",
+    "        - curvature_thresholds_by_tip: Dictionary with curvature thresholds by tip.\n",
+    "        - height_thresholds_by_tip: Dictionary with height thresholds by tip.\n",
     "    \"\"\"\n",
     "    defect_stats_list = []\n",
     "    bad_grains = set()\n",
     "    new_grains_dictionary = {}\n",
     "\n",
     "    # find curvature defects\n",
-    "    grains_dictionary = find_curvature_defects_grains_dictionary(\n",
+    "    grains_dictionary, curvature_thresholds_by_tip = find_curvature_defects_grains_dictionary(\n",
     "        grains_dictionary=grains_dictionary,\n",
     "        defect_method=curvature_defect_method,\n",
     "        curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
@@ -652,7 +733,7 @@
     "    )\n",
     "\n",
     "    # find height defects\n",
-    "    grains_dictionary = find_height_defects_grains_dictionary(\n",
+    "    grains_dictionary, height_thresholds_by_tip = find_height_defects_grains_dictionary(\n",
     "        grains_dictionary=grains_dictionary,\n",
     "        defect_method=height_defect_method,\n",
     "        height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
@@ -663,6 +744,7 @@
     "    for grain_index, grain_data in grains_dictionary.items():\n",
     "        print(f\"g{grain_index}\", end=\" \")\n",
     "        dose = grain_data[\"dose\"]\n",
+    "        tip = grain_data[\"tip\"]\n",
     "        image = grain_data[\"image\"]\n",
     "        filename = grain_data[\"filename\"]\n",
     "        grain_bad = False\n",
@@ -754,10 +836,21 @@
     "            )\n",
     "            # plot horizontal traces\n",
     "            ax[0, 0].plot(cumulative_resampled_distances_px, smoothed_curvatures, \"k\")\n",
+    "            if curvature_defect_method == \"per_tip_median_iqr\":\n",
+    "                threshold_above, threshold_below = curvature_thresholds_by_tip[tip]\n",
+    "                ax[0, 0].axhline(threshold_above, color=\"red\", linestyle=\"--\", label=\"threshold above\")\n",
+    "                ax[0, 0].axhline(threshold_below, color=\"blue\", linestyle=\"--\", label=\"threshold below\")\n",
+    "                ax[0, 0].legend()\n",
+    "            ax[0, 0].set_ylim(-0.5, 0.5)\n",
     "            ax[0, 0].set_xlabel(\"Distance (nm)\")\n",
     "            ax[0, 0].set_ylabel(\"Curvature (1/nm)\")\n",
     "            ax[0, 0].set_title(f\"Curvature\")\n",
     "            ax[0, 1].plot(cumulative_resampled_distances_px, resampled_heights, \"k\")\n",
+    "            if height_defect_method == \"per_tip_median_iqr\":\n",
+    "                threshold_height = height_thresholds_by_tip[tip][1]\n",
+    "                ax[0, 1].axhline(threshold_height, color=\"red\", linestyle=\"--\", label=\"threshold\")\n",
+    "                ax[0, 1].legend()\n",
+    "            ax[0, 1].set_ylim(0, 4)\n",
     "            ax[0, 1].set_xlabel(\"Distance (nm)\")\n",
     "            ax[0, 1].set_ylabel(\"Height (nm)\")\n",
     "            ax[0, 1].set_title(f\"Height\")\n",
@@ -783,9 +876,12 @@
     "            ax_coincide.scatter(resampled_points_px[0, 1], resampled_points_px[0, 0], color=\"white\", s=100)\n",
     "            ax_coincide.set_title(f\"Coinciding Defects\")\n",
     "\n",
+    "            output_dir = defect_stats_dir / f\"{dose}GY\"\n",
+    "            output_dir.mkdir(exist_ok=True)\n",
+    "\n",
     "            # save the figure\n",
     "            fig.savefig(\n",
-    "                defect_stats_dir / f\"{dose}GY\" / f\"grain_{grain_index}_mol{molecule_index}_defects.png\",\n",
+    "                output_dir / f\"grain_{grain_index}_mol{molecule_index}_defects.png\",\n",
     "                dpi=200,\n",
     "            )\n",
     "            plt.close(fig)\n",
@@ -800,7 +896,12 @@
     "    print(\"\")\n",
     "    print(f\"bad grains: {bad_grains}\")\n",
     "\n",
-    "    return new_grains_dictionary, pd.DataFrame(defect_stats_list)\n",
+    "    return (\n",
+    "        new_grains_dictionary,\n",
+    "        pd.DataFrame(defect_stats_list),\n",
+    "        curvature_thresholds_by_tip,\n",
+    "        height_thresholds_by_tip,\n",
+    "    )\n",
     "\n",
     "\n",
     "interval_nm = 2.0  # nm\n",
@@ -823,17 +924,19 @@
     "height_threshold_abs_nm = 10.0  # nm, absolute height threshold\n",
     "coindicing_defect_distance_threshold_nm = 10.0  # nm, distance threshold for coinciding defects\n",
     "print(\"finding defects in height and curvature\")\n",
-    "grains_dictionary_defects, defect_stats_df = find_defects_in_height_and_curvature(\n",
-    "    grains_dictionary=grains_dictionary_resampled,\n",
-    "    curvature_defect_method=curvature_defect_method,\n",
-    "    curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
-    "    curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
-    "    height_defect_method=height_defect_method,\n",
-    "    height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
-    "    height_threshold_abs_nm=height_threshold_abs_nm,\n",
-    "    coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
-    "    defect_stats_dir=defect_stats_dir,\n",
-    "    plot_defects=False,\n",
+    "grains_dictionary_defects, defect_stats_df, curvature_thresholds_by_tip, height_thresholds_by_tip = (\n",
+    "    find_defects_in_height_and_curvature(\n",
+    "        grains_dictionary=grains_dictionary_resampled,\n",
+    "        curvature_defect_method=curvature_defect_method,\n",
+    "        curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
+    "        curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
+    "        height_defect_method=height_defect_method,\n",
+    "        height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
+    "        height_threshold_abs_nm=height_threshold_abs_nm,\n",
+    "        coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
+    "        defect_stats_dir=defect_stats_dir,\n",
+    "        plot_defects=True,\n",
+    "    )\n",
     ")\n",
     "\n",
     "# save the defect stats to a csv\n",
