--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -1097,48 +1097,93 @@
     "        except Exception as e:\n",
     "            print(f\"Error converting item {item} to list: {e}\")\n",
     "\n",
-    "    return extracted_list"
+    "    return extracted_list\n",
+    "\n",
+    "def get_defect_gap_lengths(df: pd.DataFrame, column_name: str) -> dict[int, list[list[float]]]:\n",
+    "    \"\"\"Get defect gap lengths from a DataFrame column where the items are lists.\"\"\"\n",
+    "\n",
+    "    defect_gap_lengths_by_number_of_gaps = {}\n",
+    "\n",
+    "    # iterate over the rows of the dataframe\n",
+    "    for i, row in df.iterrows():\n",
+    "        # grab gap lengths\n",
+    "        gap_lengths = eval(row[column_name])\n",
+    "        if isinstance(gap_lengths, list):\n",
+    "            num_gaps = len(gap_lengths)\n",
+    "            if num_gaps not in defect_gap_lengths_by_number_of_gaps:\n",
+    "                defect_gap_lengths_by_number_of_gaps[num_gaps] = []\n",
+    "            defect_gap_lengths_by_number_of_gaps[num_gaps].append(gap_lengths)\n",
+    "        else:\n",
+    "            print(f\"Row {i} has non-list gap lengths: {row[column_name]}\")\n",
+    "    return defect_gap_lengths_by_number_of_gaps\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64dea124",
+   "id": "3a46a434",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stripplot of height defects lengths\n",
-    "height_defects_lengths = extract_list_from_lists_in_df(defect_stats_df, \"height_defects_lengths\")\n",
-    "sns.stripplot(y=height_defects_lengths, color=\"black\", alpha=0.5)\n",
-    "sns.violinplot(y=height_defects_lengths, color=\"lightgrey\")\n",
-    "plt.ylabel(\"Height Defect Lengths (nm)\")\n",
-    "plt.title(\"Height Defect Lengths\")\n",
-    "plt.show()\n",
-    "# stripplot of height defect gaps lengths\n",
-    "height_defect_gaps_lengths = extract_list_from_lists_in_df(\n",
-    "    defect_stats_df, \"height_defect_gaps_lengths\", ignore_single_elements=True\n",
+    "# get the curvature defect gap lengths\n",
+    "curvature_defect_gap_lengths = get_defect_gap_lengths(\n",
+    "    df=defect_stats_df,\n",
+    "    column_name=\"curvature_defect_gaps_lengths\",\n",
     ")\n",
-    "sns.stripplot(y=height_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
-    "sns.violinplot(y=height_defect_gaps_lengths, color=\"lightgrey\")\n",
-    "plt.ylabel(\"Height Defect Gap Lengths (nm)\")\n",
-    "plt.title(\"Height Defect Gap Lengths\")\n",
-    "plt.show()\n",
-    "# stripplot of curvature defects lengths\n",
-    "curvature_defects_lengths = extract_list_from_lists_in_df(defect_stats_df, \"curvature_defects_lengths\")\n",
-    "sns.stripplot(y=curvature_defects_lengths, color=\"black\", alpha=0.5)\n",
-    "sns.violinplot(y=curvature_defects_lengths, color=\"lightgrey\")\n",
-    "plt.ylabel(\"Curvature Defect Lengths (nm)\")\n",
-    "plt.title(\"Curvature Defect Lengths\")\n",
-    "plt.show()\n",
-    "# stripplot of curvature defect gaps lengths\n",
-    "curvature_defect_gaps_lengths = extract_list_from_lists_in_df(\n",
-    "    defect_stats_df, \"curvature_defect_gaps_lengths\", ignore_single_elements=True\n",
+    "\n",
+    "# for each number of gaps, plot the distribution of gap lengths\n",
+    "for num_gaps, gap_lengths in curvature_defect_gap_lengths.items():\n",
+    "    print(f\"Number of gaps: {num_gaps}\")\n",
+    "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
+    "\n",
+    "    plt.figure()\n",
+    "    sns.histplot(gap_lengths_flat, bins=50, kde=True)\n",
+    "    plt.xlabel(\"Gap Length (nm)\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.title(f\"Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)}, num grains: {len(gap_lengths)}\")\n",
+    "    plt.xlim(0, 700)\n",
+    "    plt.show()\n",
+    "\n",
+    "    if num_gaps > 1:\n",
+    "        # plot the summed gap lengths for each list\n",
+    "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
+    "        plt.figure()\n",
+    "        sns.histplot(summed_gap_lengths, bins=50, kde=True)\n",
+    "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.title(f\"Summed Curvature Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\")\n",
+    "        plt.xlim(0, 700)\n",
+    "        plt.show()\n",
+    "\n",
+    "# get the height defect gap lengths\n",
+    "height_defect_gap_lengths = get_defect_gap_lengths(\n",
+    "    df=defect_stats_df,\n",
+    "    column_name=\"height_defect_gaps_lengths\",\n",
     ")\n",
-    "sns.stripplot(y=curvature_defect_gaps_lengths, color=\"black\", alpha=0.5)\n",
-    "sns.violinplot(y=curvature_defect_gaps_lengths, color=\"lightgrey\")\n",
-    "plt.ylabel(\"Curvature Defect Gap Lengths (nm)\")\n",
-    "plt.title(\"Curvature Defect Gap Lengths\")\n",
-    "plt.show()"
+    "\n",
+    "# for each number of gaps, plot the distribution of gap lengths\n",
+    "for num_gaps, gap_lengths in height_defect_gap_lengths.items():\n",
+    "    print(f\"Number of gaps: {num_gaps}\")\n",
+    "    gap_lengths_flat = [length for sublist in gap_lengths for length in sublist]\n",
+    "    plt.figure()\n",
+    "    sns.histplot(gap_lengths_flat, bins=50, kde=True)\n",
+    "    plt.xlabel(\"Gap Length (nm)\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.title(f\"Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(gap_lengths_flat)} num grains: {len(gap_lengths)}\")\n",
+    "    plt.xlim(0, 700)\n",
+    "    plt.show()\n",
+    "\n",
+    "    if num_gaps > 1:\n",
+    "        # plot the summed gap lengths for each list\n",
+    "        summed_gap_lengths = [sum(lengths) for lengths in gap_lengths]\n",
+    "        plt.figure()\n",
+    "        sns.histplot(summed_gap_lengths, bins=50, kde=True)\n",
+    "        plt.xlabel(\"Summed Gap Length (nm)\")\n",
+    "        plt.ylabel(\"Count\")\n",
+    "        plt.title(f\"Summed Height Defect Gap Lengths (Number of Gaps: {num_gaps}) N: {len(summed_gap_lengths)} num grains: {len(gap_lengths)}\")\n",
+    "        plt.xlim(0, 700)\n",
+    "        plt.show()\n"
    ]
   },
   {
