--- a/hariborings/cas9_analysis.ipynb
+++ b/hariborings/cas9_analysis.ipynb
@@ -12,7 +12,6 @@
     "from datetime import datetime\n",
     "\n",
     "import numpy as np\n",
-    "import shapely\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy.ndimage import distance_transform_edt, gaussian_filter1d, binary_fill_holes\n",
@@ -1973,7 +1972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dl-metal",
+   "display_name": "topostats",
    "language": "python",
    "name": "python3"
   },
@@ -1987,7 +1986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
