Finish loader for all samples with vetting for pixel_to_nm_scaling

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -78,13 +78,15 @@
     "data_dirs = {\n",
     "    \"ON_SC\": BASE_DATA_DIR / f\"cas9_ON_SC/{DATE_TO_READ_FROM}\",\n",
     "    \"OT1_SC\": BASE_DATA_DIR / f\"cas9_OT1_SC/{DATE_TO_READ_FROM}\",\n",
-    "    \"OT2_SC\": BASE_DATA_DIR / f\"cas9_OT2_SC/{DATE_TO_READ_FROM}\"\n",
+    "    \"OT2_SC\": BASE_DATA_DIR / f\"cas9_OT2_SC/{DATE_TO_READ_FROM}\",\n",
     "}\n",
     "BASE_SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/processed_grains/\")\n",
+    "MAX_PX_TO_NM = 10.0\n",
+    "\n",
     "save_dirs = {\n",
     "    \"ON_SC\": BASE_SAVE_DIR / f\"cas9_ON_SC/{TODAY_DATE}\",\n",
     "    \"OT1_SC\": BASE_SAVE_DIR / f\"cas9_OT1_SC/{TODAY_DATE}\",\n",
-    "    \"OT2_SC\": BASE_SAVE_DIR / f\"cas9_OT2_SC/{TODAY_DATE}\"\n",
+    "    \"OT2_SC\": BASE_SAVE_DIR / f\"cas9_OT2_SC/{TODAY_DATE}\",\n",
     "}\n",
     "for sample_type in save_dirs.keys():\n",
     "    save_dirs[sample_type].mkdir(exist_ok=True, parents=True)\n",
@@ -95,11 +97,20 @@
     "    grains_dicts[sample_type] = {}\n",
     "    file_path = data_dirs[sample_type] / \"grain_dict.pkl\"\n",
     "    with open(file_path, \"rb\") as f:\n",
-    "        grains_dicts[sample_type] = pickle.load(f)\n",
+    "        sample_grains_dicts = pickle.load(f)\n",
+    "        for grain_index, single_grain_dict in sample_grains_dicts.items():\n",
+    "            p_to_nm = single_grain_dict[\"p_to_nm\"]\n",
+    "            if p_to_nm > MAX_PX_TO_NM:\n",
+    "                print(\n",
+    "                    f\"Skipping grain {grain_index} for sample type [{sample_type}] due to p_to_nm too large: {p_to_nm} > {MAX_PX_TO_NM}\"\n",
+    "                )\n",
+    "            else:\n",
+    "                grains_dicts[sample_type][grain_index] = single_grain_dict\n",
+    "\n",
     "\n",
     "# print num grains for each sample type\n",
     "for sample_type, grain_dict in grains_dicts.items():\n",
-    "    print(f\"Number of grains for sample type [{sample_type}]: {len(grain_dict.keys())}\")\n"
+    "    print(f\"Number of grains for sample type [{sample_type}]: {len(grain_dict.keys())}\")"
    ]
   }
  ],
