Add plotting for all grains at once

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -112,6 +112,66 @@
     "for sample_type, grain_dict in grains_dicts.items():\n",
     "    print(f\"Number of grains for sample type [{sample_type}]: {len(grain_dict.keys())}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dbc5232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_all_grains_dictionary(\n",
+    "    grain_dict: dict,\n",
+    "    num_cols=3,\n",
+    "    vmin=VMIN,\n",
+    "    vmax=VMAX,\n",
+    "    cmap=CMAP,\n",
+    ") -> None:\n",
+    "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
+    "    num_grains = len(grain_dict.keys())\n",
+    "    num_rows = num_grains // num_cols + (num_grains % num_cols > 0)\n",
+    "    num_images_per_grain = 2  # image and mask\n",
+    "    fig, ax = plt.subplots(\n",
+    "        nrows=num_rows,\n",
+    "        ncols=num_cols * num_images_per_grain,\n",
+    "        figsize=(num_cols * 4, num_rows * 4),\n",
+    "        constrained_layout=True,\n",
+    "        dpi=200,\n",
+    "    )\n",
+    "    for i, (grain_index, grain_data) in enumerate(grain_dict.items()):\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        grain_p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "\n",
+    "        row = i // num_cols\n",
+    "        col = (i % num_cols) * num_images_per_grain\n",
+    "\n",
+    "        image_ax = ax[row, col]\n",
+    "        image_ax.imshow(grain_image, vmin=vmin, vmax=vmax, cmap=cmap)\n",
+    "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\")\n",
+    "        image_ax.axis(\"off\")\n",
+    "        mask_ax = ax[row, col + 1]\n",
+    "        mask_ax.imshow(grain_mask)\n",
+    "        mask_ax.set_title(\"Mask\")\n",
+    "        mask_ax.axis(\"off\")\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df344210",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot all grains\n",
+    "for sample_type, grain_dict in grains_dicts.items():\n",
+    "    print(f\"Plotting grains for sample type [{sample_type}]\")\n",
+    "    plot_all_grains_dictionary(grain_dict, vmin=VMIN, vmax=VMAX, cmap=CMAP)\n",
+    "    plt.savefig(save_dirs[sample_type] / f\"grains_{sample_type}.png\", dpi=200)\n",
+    "    plt.close()"
+   ]
   }
  ],
  "metadata": {
