[WIP] pathfinding reimplementation

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -136,6 +136,35 @@
     "    plt.savefig(save_dirs[sample_type] / f\"grains_{sample_type}.png\", dpi=200)\n",
     "    plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb72405f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pathfinding\n",
+    "grains_dicts_paths = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts.items():\n",
+    "    grains_dicts_paths[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "\n",
+    "        # distance transforms\n",
+    "        distance_transform = distance_transform_edt(grain_mask > 0)\n",
+    "        distance_transform[grain_mask==2] = 0\n",
+    "\n",
+    "        # start at point where intersection region 0 has maximum distance transform\n",
+    "        intersection_labels = label(intersection_labels)\n",
+    "        intersection_regions = regionprops(intersection_labels)\n",
+    "        region_0 = intersection_regions[0]\n",
+    "        region_1 = intersection_regions[1]\n",
+    "        region_0_distance_transform_valeus = \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
