Add distance transform pathfinding to create traces. Also make plotting versatile.

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "import seaborn as sns\n",
     "from scipy.ndimage import distance_transform_edt, gaussian_filter1d, binary_fill_holes\n",
     "from skimage.measure import label, regionprops\n",
@@ -86,10 +87,12 @@
    "source": [
     "def plot_all_grains_dictionary(\n",
     "    grain_dict: dict,\n",
-    "    num_cols=3,\n",
-    "    vmin=VMIN,\n",
-    "    vmax=VMAX,\n",
-    "    cmap=CMAP,\n",
+    "    num_cols: int = 3,\n",
+    "    vmin: float = VMIN,\n",
+    "    vmax: float = VMAX,\n",
+    "    cmap: mpl.cm = CMAP,\n",
+    "    plot_paths: bool = False,\n",
+    "    save_path: Path | None = None,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
@@ -114,10 +117,22 @@
     "        image_ax.imshow(grain_image, vmin=vmin, vmax=vmax, cmap=cmap)\n",
     "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\")\n",
     "        image_ax.axis(\"off\")\n",
+    "\n",
+    "        # plot mask\n",
     "        mask_ax = ax[row, col + 1]\n",
     "        mask_ax.imshow(grain_mask)\n",
+    "        # plot paths if present and required\n",
+    "        if plot_paths and \"path\" in grain_data:\n",
+    "            path = grain_data[\"path\"]\n",
+    "            if path is not None:\n",
+    "                mask_ax.plot(path[:, 1], path[:, 0], color=\"white\", linewidth=2)\n",
     "        mask_ax.set_title(\"Mask\")\n",
     "        mask_ax.axis(\"off\")\n",
+    "\n",
+    "    if save_path is not None:\n",
+    "        # create the parent directory\n",
+    "        save_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        fig.savefig(save_path, dpi=300)\n",
     "\n",
     "    plt.show()"
    ]
@@ -155,15 +170,60 @@
     "\n",
     "        # distance transforms\n",
     "        distance_transform = distance_transform_edt(grain_mask > 0)\n",
-    "        distance_transform[grain_mask==2] = 0\n",
+    "        distance_transform[grain_mask == 2] = 0\n",
     "\n",
     "        # start at point where intersection region 0 has maximum distance transform\n",
     "        intersection_labels = label(intersection_labels)\n",
     "        intersection_regions = regionprops(intersection_labels)\n",
+    "        # Get intersection regions\n",
     "        region_0 = intersection_regions[0]\n",
     "        region_1 = intersection_regions[1]\n",
-    "        region_0_distance_transform_valeus = \n",
-    "\n"
+    "        # Create list of distance transform values for each region\n",
+    "        region_0_distance_transform_values = []\n",
+    "        region_1_distance_transform_values = []\n",
+    "        for pixel in region_0.coords:\n",
+    "            region_0_distance_transform_values.append(distance_transform[pixel[0], pixel[1]])\n",
+    "        for pixel in region_1.coords:\n",
+    "            region_1_distance_transform_values.append(distance_transform[pixel[0], pixel[1]])\n",
+    "        region_0_distance_transform_values = np.array(region_0_distance_transform_values)\n",
+    "        region_1_distance_transform_values = np.array(region_1_distance_transform_values)\n",
+    "        # Get the maximum distance transform value for each region\n",
+    "        region_0_max_distance_transform_value = np.max(region_0_distance_transform_values)\n",
+    "        region_1_max_distance_transform_value = np.max(region_1_distance_transform_values)\n",
+    "        region_0_max_distance_transform_value_index = np.argmax(region_0_distance_transform_values)\n",
+    "        region_1_max_distance_transform_value_index = np.argmax(region_1_distance_transform_values)\n",
+    "        # get the pixel coord of the maximum distance transform value for each region\n",
+    "        region_0_max_distance_transform_pixel = region_0.coords[region_0_max_distance_transform_value_index]\n",
+    "        region_1_max_distance_transform_pixel = region_1.coords[region_1_max_distance_transform_value_index]\n",
+    "\n",
+    "        start_point = (region_0_max_distance_transform_pixel[0], region_0_max_distance_transform_pixel[1])\n",
+    "        end_point = (region_1_max_distance_transform_pixel[0], region_1_max_distance_transform_pixel[1])\n",
+    "\n",
+    "        # invert the distance transform to get the cost map\n",
+    "        cost_map = np.max(distance_transform) - distance_transform\n",
+    "        # set the maximum value to be huge\n",
+    "        cost_map[cost_map == np.max(cost_map)] = 1e4\n",
+    "\n",
+    "        route, weight = route_through_array(array=cost_map, start=start_point, end=end_point)\n",
+    "\n",
+    "        route = np.array(route)\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_paths[sample_type][grain_index] = grain_data\n",
+    "        # add the route to the grain data\n",
+    "        grains_dicts_paths[sample_type][grain_index][\"path\"] = route\n",
+    "\n",
+    "# plot all grains with paths\n",
+    "for sample_type, grain_dict in grains_dicts_paths.items():\n",
+    "    print(f\"Plotting grains with paths for sample type [{sample_type}]\")\n",
+    "    plot_all_grains_dictionary(\n",
+    "        grain_dict=grain_dict,\n",
+    "        vmin=VMIN,\n",
+    "        vmax=VMAX,\n",
+    "        cmap=CMAP,\n",
+    "        plot_paths=True,\n",
+    "        save_path=save_dirs[sample_type] / f\"grains_with_paths_{sample_type}.png\",\n",
+    "    )"
    ]
   }
  ],
