add path resampling using topostats' builtin resamping and make plotting paths modular

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -22,6 +22,7 @@
     "from skimage.morphology import binary_dilation, binary_erosion, skeletonize\n",
     "\n",
     "from topostats.plottingfuncs import Colormap\n",
+    "from topostats.tracing.splining import windowTrace\n",
     "\n",
     "colormap = Colormap()\n",
     "CMAP = colormap.get_cmap()\n",
@@ -91,7 +92,7 @@
     "    vmin: float = VMIN,\n",
     "    vmax: float = VMAX,\n",
     "    cmap: mpl.cm = CMAP,\n",
-    "    plot_paths: bool = False,\n",
+    "    plot_paths: list[str] = None,\n",
     "    save_path: Path | None = None,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
@@ -122,12 +123,16 @@
     "        mask_ax = ax[row, col + 1]\n",
     "        mask_ax.imshow(grain_mask)\n",
     "        # plot paths if present and required\n",
-    "        if plot_paths and \"path\" in grain_data:\n",
-    "            path = grain_data[\"path\"]\n",
-    "            if path is not None:\n",
-    "                mask_ax.plot(path[:, 1], path[:, 0], color=\"white\", linewidth=2)\n",
+    "        if plot_paths is not None:\n",
+    "            for path_name in plot_paths:\n",
+    "                if path_name in grain_data:\n",
+    "                    path = grain_data[path_name]\n",
+    "                    if path is not None:\n",
+    "                        mask_ax.plot(path[:, 1], path[:, 0], color=\"red\", linewidth=2, label=path_name)\n",
     "        mask_ax.set_title(\"Mask\")\n",
     "        mask_ax.axis(\"off\")\n",
+    "\n",
+    "    plt.legend(loc=\"upper right\", bbox_to_anchor=(1.1, 1), fontsize=\"small\")\n",
     "\n",
     "    if save_path is not None:\n",
     "        # create the parent directory\n",
@@ -221,8 +226,49 @@
     "        vmin=VMIN,\n",
     "        vmax=VMAX,\n",
     "        cmap=CMAP,\n",
-    "        plot_paths=True,\n",
+    "        plot_paths=[\"path\"],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_paths_{sample_type}.png\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031c0178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# smoothing the paths\n",
+    "grains_dicts_smooth_paths = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts_paths.items():\n",
+    "    grains_dicts_smooth_paths[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "        p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "        path = grain_data[\"path\"]\n",
+    "\n",
+    "        smoothed_path = windowTrace.pool_trace_linear(\n",
+    "            pixel_trace=path,\n",
+    "            rolling_window_size=5,\n",
+    "            pixel_to_nm_scaling=p_to_nm,\n",
+    "        )\n",
+    "\n",
+    "        # save the original grain data\n",
+    "        grains_dicts_smooth_paths[sample_type][grain_index] = grain_data\n",
+    "        # add the smoothed path to the grain data\n",
+    "        grains_dicts_smooth_paths[sample_type][grain_index][\"smoothed_path\"] = smoothed_path\n",
+    "# plot all grains with smoothed paths\n",
+    "for sample_type, grain_dict in grains_dicts_smooth_paths.items():\n",
+    "    print(f\"Plotting grains with smoothed paths for sample type [{sample_type}]\")\n",
+    "    plot_all_grains_dictionary(\n",
+    "        grain_dict=grain_dict,\n",
+    "        vmin=VMIN,\n",
+    "        vmax=VMAX,\n",
+    "        cmap=CMAP,\n",
+    "        plot_paths=[\"smoothed_path\"],\n",
+    "        save_path=save_dirs[sample_type] / f\"grains_with_smoothed_paths_{sample_type}.png\",\n",
     "    )"
    ]
   }
