make plotting inline optional

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -94,6 +94,7 @@
     "    cmap: mpl.cm = CMAP,\n",
     "    plot_paths: list[str] = None,\n",
     "    save_path: Path | None = None,\n",
+    "    show_plot: bool = True,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
     "    num_grains = len(grain_dict.keys())\n",
@@ -137,9 +138,13 @@
     "    if save_path is not None:\n",
     "        # create the parent directory\n",
     "        save_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        print(f\"saving figure to {save_path}\")\n",
     "        fig.savefig(save_path, dpi=300)\n",
     "\n",
-    "    plt.show()"
+    "    if show_plot:\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        plt.close(fig)"
    ]
   },
   {
@@ -259,6 +264,7 @@
     "        grains_dicts_smooth_paths[sample_type][grain_index] = grain_data\n",
     "        # add the smoothed path to the grain data\n",
     "        grains_dicts_smooth_paths[sample_type][grain_index][\"smoothed_path\"] = smoothed_path\n",
+    "\n",
     "# plot all grains with smoothed paths\n",
     "for sample_type, grain_dict in grains_dicts_smooth_paths.items():\n",
     "    print(f\"Plotting grains with smoothed paths for sample type [{sample_type}]\")\n",
@@ -269,6 +275,7 @@
     "        cmap=CMAP,\n",
     "        plot_paths=[\"smoothed_path\"],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_smoothed_paths_{sample_type}.png\",\n",
+    "        show_plot=False,\n",
     "    )"
    ]
   }
